# String-Tomfoolery

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  library.h  stomfoolery.cpp  stomfoolery.hpp  stomfoolery.inc
.github/workflows/: cmake.yml  testreport.yml
src/: stomfoolery.hpp  stomfoolery.inc
test/: CMakeLists.txt  test_join.cpp  test_repeat.cpp  test_split.cpp  test_split_by_int.cpp  test_split_by_regex.cpp  test_split_by_string.cpp
